--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 boto3==1.18.58
 botocore==1.21.58
-dvc
+dvc==2.7.4
 matplotlib==3.4.3
 pandas==1.3.3
 PyYAML==5.4.1
-tensorflow==2.5
+tensorflow==2.3.4
 tqdm==4.62.3
 joblib==1.1.0
 scipy==1.7.1
 
-# local setup installation -
-#y
-#-e .
+# local setup installation 
+-e .
