--- a/config/config.yaml
+++ b/config/config.yaml
@@ -14,6 +14,6 @@ source_download_dirs:
   - ../outside_data/dog
   - ../outside_data/cat
 
-local_data_path:
+local_data_dirs:
   - data/dog
   - data/cat
